OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ollama-run/ollama-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-external
  namespace: ollama
spec:
  type: NodePort
  selector:
    app: ollama
  ports:
    - name: http
      protocol: TCP
      port: 11434
      targetPort: 11434
      nodePort: 30823  # Фиксированный порт (30000-32767)
