OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ollama-run/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
  labels:
    app: ollama
spec:
  selector:
    app: ollama
  ports:
    - name: http
      port: 11434
      targetPort: http
  type: ClusterIP
