OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ollama-run/ollama-ingressroute-tcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ollama-tcp
  namespace: ollama
spec:
  entryPoints:
    - ollama-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: ollama
          port: 11434
      middlewares:
        - name: ollama-basic-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ollama-basic-auth
  namespace: ollama
spec:
  basicAuth:
    secret: ollama-basic-auth
